fix scrolling on ios

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,7 +10,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  -webkit-overflow-scrolling: touch;
 }
 
 .app-name {
@@ -24,7 +23,9 @@
 }
 
 .app-content {
-  padding-top: 5px;
+  flex: 1;
+  margin: 0 auto;
+  padding-top: 2em;
   padding-left: 20vw;
   padding-right: 20vw;
 }
