--- a/src/app/feature/transactions/transactions-page.component.less
+++ b/src/app/feature/transactions/transactions-page.component.less
@@ -33,11 +33,6 @@
   text-decoration: line-through;
 }
 
-.content {
-  height: calc(100vh - 64px);
-  overflow: auto;
-}
-
 .list-entry {
   border-radius: 20px;
   border: 2px solid #afacac;
@@ -76,10 +71,6 @@
   }
 }
 
-.section {
-
-}
-
 .spinner:before {
   content: '';
   box-sizing: border-box;
@@ -95,7 +86,6 @@
   border-top-color: #000000;
   animation: spinner .8s linear infinite;
 }
-
 
 .loading-indicator {
   position: fixed;
@@ -119,4 +109,8 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+.padding-list-item {
+  padding-top: 5px;
 }
